--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+
+    <link rel="stylesheet" href="./css/main.min.css" />
+    </head>
   <body>
     <header class="header">
       <div class="container header-container">
