sass edits added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     />
 
     <link rel="stylesheet" href="./css/main.min.css" />
-    </head>
+  </head>
   <body>
     <header class="header">
-      <div class="container header-container">
+      <div class="container header__container">
         <a class="logo link" href="./index.html" lang="en"
           >Web<span class="logo-header-color">Studio</span></a
         >
