--- a/portfolio.html
+++ b/portfolio.html
@@ -21,16 +21,16 @@
   <body>
     <header class="header">
       <div class="container header__container">
-        <a class="logo link" href="./index.html" lang="en"
-          >Web<span class="logo--color">Studio</span></a
+        <a class="logo header__logo link" href="./index.html" lang="en"
+          >Web<span class="logo_color_dark">Studio</span></a
         >
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
-              <a class="nav__link link nav__link--active" href="./index.html">Студия</a>
+              <a class="nav__link link" href="./index.html">Студия</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link link" href="./portfolio.html">Портфолио</a>
+              <a class="nav__link link nav__link_active" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav__item"><a class="nav__link link" href="">Контакты</a></li>
           </ul>
@@ -276,14 +276,14 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-contacts__box">
-          <a class="footer-logo link" href="./index.html" lang="en"
-            >Web<span class="footer-logo--color">Studio</span></a
+          <a class="logo footer__logo link" href="./index.html" lang="en"
+            >Web<span class="logo_color_light">Studio</span></a
           >
           <address>
             <ul class="footer-contacts__list list">
               <li class="footer-contacts__item">
                 <a
-                  class="footer-contacts__link footer-contacts__link--color link"
+                  class="footer-contacts__link footer-contacts__link_color link"
                   href="https://goo.gl/maps/cRMagZyy7CcEZu3e9"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -304,28 +304,28 @@
         <div class="footer__wrapper">
           <b class="footer__text">Присоединяйтесь</b>
           <ul class="social-links__list list">
-            <li class="social-links--right">
+            <li class="social-links_right">
               <a class="social-links__link footer__social-links" aria-label="instagram" href="">
                 <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-links--right">
+            <li class="social-links_right">
               <a class="social-links__link footer__social-links" aria-label="twitter" href="">
                 <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-links--right">
+            <li class="social-links_right">
               <a class="social-links__link footer__social-links" aria-label="facebook" href="">
                 <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-links--right">
+            <li class="social-links_right">
               <a class="social-links__link footer__social-links" aria-label="linkedin" href="">
                 <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/sprite.svg#linkedin"></use>
@@ -334,13 +334,13 @@
             </li>
           </ul>
         </div>
-        <div class="footer__wrapper--left">
+        <div class="footer__wrapper_left">
           <b class="footer__text">Подпишитесь на рассылку</b>
           <form name="contact-form" method="post" class="contact-form">
             <input type="email" name="email" class="contact-form__input" placeholder="E-mail" />
             <button type="submit" class="submit-btn">
               <span>Подписаться</span>
-              <svg class="submit-btn__icon" width="24" height="24">
+              <svg class="submit-btn__icon_left" width="24" height="24">
                 <use href="./images/sprite.svg#send-icon"></use>
               </svg>
             </button>
