--- a/portfolio.html
+++ b/portfolio.html
@@ -21,32 +21,32 @@
   <body>
     <header class="header">
       <div class="container header__container">
-        <a class="logo header__logo link" href="./index.html" lang="en"
-          >Web<span class="logo_color_dark">Studio</span></a
+        <a class="logo header__logo" href="./index.html" lang="en"
+          >Web<span class="logo__dark">Studio</span></a
         >
         <nav class="nav">
-          <ul class="nav__list list">
+          <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link link" href="./index.html">Студия</a>
+              <a class="nav__link nav__link_active" href="./index.html">Студия</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link link nav__link_active" href="./portfolio.html">Портфолио</a>
+              <a class="nav__link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav__item"><a class="nav__link link" href="">Контакты</a></li>
+            <li class="nav__item"><a class="nav__link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="header-contacts list">
-          <li class="header-contacts__mail">
-            <a class="header-contacts__link link" href="mailto:info@devstudio.com">
-              <svg class="header-contacts__icon" width="16" height="12">
+        <ul class="contacts">
+          <li class="contacts__item">
+            <a class="contacts__link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/sprite.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header-contacts__phone">
-            <a class="header-contacts__link link" href="tel:+380961111111">
-              <svg class="header-contacts__icon" width="10" height="16">
+          <li class="contacts__item">
+            <a class="contacts__link" href="tel:+380961111111">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/sprite.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -60,31 +60,35 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Примеры работ</h1>
-          <ul class="filter__list list">
-            <li class="filter__item"><button class="radio-btn" type="button">Все</button></li>
+          <ul class="filter">
             <li class="filter__item">
-              <button class="radio-btn" type="button">Веб-сайты</button>
+              <button class="radio-button" type="button">Все</button>
             </li>
             <li class="filter__item">
-              <button class="radio-btn" type="button">Приложения</button>
+              <button class="radio-button" type="button">Веб-сайты</button>
             </li>
-            <li class="filter__item"><button class="radio-btn" type="button">Дизайн</button></li>
             <li class="filter__item">
-              <button class="radio-btn" type="button">Маркетинг</button>
+              <button class="radio-button" type="button">Приложения</button>
+            </li>
+            <li class="filter__item">
+              <button class="radio-button" type="button">Дизайн</button>
+            </li>
+            <li class="filter__item">
+              <button class="radio-button" type="button">Маркетинг</button>
             </li>
           </ul>
 
-          <ul class="work-examples__list list">
+          <ul class="work-examples">
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-1.jpg"
                     alt="веб-сайт Технокряк"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -97,15 +101,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-2.jpg"
                     alt="дизайн постера Нью Орлеан против Голден Стар"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -120,15 +124,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-3.jpg"
                     alt="приложение ресторана Сиафуд"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -141,15 +145,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-4.jpg"
                     alt="маркетинг проект Прайм"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -162,15 +166,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-5.jpg"
                     alt="приложение проект Боксес"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -183,15 +187,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-6.jpg"
                     alt="веб-сайт Инспирейшн хез но бордерс"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -204,15 +208,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-7.jpg"
                     alt="дизайн издания Лимитед Эдишн"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -227,15 +231,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-8.jpg"
                     alt="маркетинг проект ЛАБ"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -248,15 +252,15 @@
               </a>
             </li>
             <li class="work-examples__item">
-              <a class="work-examples__link link" href="">
-                <div class="image__wrapper">
+              <a class="work-examples__link" href="">
+                <div class="image-wrapper">
                   <img
                     src="./images/img-work-example-9.jpg"
                     alt="приложение Гроуинг Бизнесс"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay__text">
+                  <p class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
@@ -274,16 +278,16 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer-contacts__box">
-          <a class="logo footer__logo link" href="./index.html" lang="en"
-            >Web<span class="logo_color_light">Studio</span></a
+      <div class="container footer-container">
+        <div class="footer-contacts">
+          <a class="logo footer__logo" href="./index.html" lang="en"
+            >Web<span class="logo__light">Studio</span></a
           >
           <address>
-            <ul class="footer-contacts__list list">
+            <ul class="footer-contacts__list">
               <li class="footer-contacts__item">
                 <a
-                  class="footer-contacts__link footer-contacts__link_color link"
+                  class="footer-contacts__link footer-contacts__link_other-color"
                   href="https://goo.gl/maps/cRMagZyy7CcEZu3e9"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -291,43 +295,41 @@
                 >
               </li>
               <li class="footer-contacts__item">
-                <a class="footer-contacts__link link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="footer-contacts__link" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="footer-contacts__item">
-                <a class="footer-contacts__link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="footer-contacts__link" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="footer__wrapper">
           <b class="footer__text">Присоединяйтесь</b>
-          <ul class="social-links__list list">
-            <li class="social-links_right">
-              <a class="social-links__link footer__social-links" aria-label="instagram" href="">
-                <svg class="social-link__icon" width="20" height="20">
+          <ul class="socials">
+            <li class="socials_right">
+              <a class="socials__link footer__socials" aria-label="instagram" href="">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-links_right">
-              <a class="social-links__link footer__social-links" aria-label="twitter" href="">
-                <svg class="social-link__icon" width="20" height="20">
+            <li class="socials_right">
+              <a class="socials__link footer__socials" aria-label="twitter" href="">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-links_right">
-              <a class="social-links__link footer__social-links" aria-label="facebook" href="">
-                <svg class="social-link__icon" width="20" height="20">
+            <li class="socials_right">
+              <a class="socials__link footer__socials" aria-label="facebook" href="">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-links_right">
-              <a class="social-links__link footer__social-links" aria-label="linkedin" href="">
-                <svg class="social-link__icon" width="20" height="20">
+              <a class="socials__link footer__socials" aria-label="linkedin" href="">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
               </a>
@@ -338,9 +340,9 @@
           <b class="footer__text">Подпишитесь на рассылку</b>
           <form name="contact-form" method="post" class="contact-form">
             <input type="email" name="email" class="contact-form__input" placeholder="E-mail" />
-            <button type="submit" class="submit-btn">
+            <button type="submit" class="button submit-button">
               <span>Подписаться</span>
-              <svg class="submit-btn__icon_left" width="24" height="24">
+              <svg class="submit-button__icon_left" width="24" height="24">
                 <use href="./images/sprite.svg#send-icon"></use>
               </svg>
             </button>
